working on apis

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
-MONGOOB_URL = "mongodb+srv://chbilalc627:TO3cMTmT40S1zCku@cluster0.eefkb.mongodb.net/"
+MONGOOB_URL = "mongodb+srv://chbilalc627:TO3cMTmT40S1zCku@cluster0.eefkb.mongodb.net"
 
 CLOUDINARY_API_KEY ="222716286484546"
 CLOUDINARY_SECRET_KEY="2YjKXVLFB35E8jFbzx0cwo-ArJE"
 CLOUDINARY_NAME = "dwtsjvbly"
+JWT_SECRITE = "chbilalwebsite"
