--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,5 @@ CLOUDINARY_API_KEY ="222716286484546"
 CLOUDINARY_SECRET_KEY="2YjKXVLFB35E8jFbzx0cwo-ArJE"
 CLOUDINARY_NAME = "dwtsjvbly"
 JWT_SECRITE = "chbilalwebsite"
+ADMIN_EMAIL = "chbilalc627@gmail.com"
+ADMIN_PASSWORD = "chbilal123"
